@@ -1,3 +1,7 @@
+2008-11-13  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* eventlogger.cc: Print error message if port width not specified.
+
 2008-11-04  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* eventlogger.cc, events.music: Input port renamed from "eventlog"
